--- a/index.html
+++ b/index.html
@@ -84,6 +84,27 @@
                         <p>Laura</p>
                     </div>
                 </div>
+                <div class="col-md-3">
+                    <div class="loko">
+                        <img class="img-responsive" src="images/pers2.jpg" alt="">
+                        <h4>Marketing</h4>
+                        <p>Laura</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="loko">
+                        <img class="img-responsive" src="images/pers3.jpg" alt="">
+                        <h4>Marketing</h4>
+                        <p>Laura</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="loko">
+                        <img class="img-responsive" src="images/pers4(1).jpg" alt="">
+                        <h4>Marketing</h4>
+                        <p>Laura</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
